[Payment Request] Shows a more useful editor title for the Contact Info dialog.

When data is missing, and the editor is opened because of that, the dialog's
title will prompt for the missing data.

Bug: 620666
Change-Id: Iafc0e741c25297a24cb4d24be29d58d366a7c940