components/payments/core/payments_profile_comparator.h
@@ -89,6 +89,12 @@ class PaymentsProfileComparator : public autofill::AutofillProfileComparator {
   base::string16 GetStringForMissingContactFields(
       const autofill::AutofillProfile& profile) const;
 
+  // Returns a localized string to be displayed as the title of a piece of UI,
+  // indicating what action must be taken for the given profile to be used as
+  // contact info.
+  base::string16 GetTitleForMissingContactFields(
+      const autofill::AutofillProfile& profile) const;
+
   // Returns a localized string to be displayed in UI indicating what action,
   // if any, must be taken for the given profile to be used as a shipping
   // address.
@@ -105,6 +111,7 @@ class PaymentsProfileComparator : public autofill::AutofillProfileComparator {
   ProfileFields GetRequiredProfileFieldsForContact() const;
   ProfileFields GetRequiredProfileFieldsForShipping() const;
   base::string16 GetStringForMissingFields(ProfileFields fields) const;
+  base::string16 GetTitleForMissingFields(ProfileFields fields) const;
   bool AreRequiredAddressFieldsPresent(
       const autofill::AutofillProfile& profile) const;
 
