ios/chrome/browser/ui/payments/contact_info_edit_mediator_unittest.mm
@@ -4,6 +4,7 @@
 
 #import "ios/chrome/browser/ui/payments/contact_info_edit_mediator.h"
 
+#include "base/guid.h"
 #include "base/mac/foundation_util.h"
 #include "components/autofill/core/browser/autofill_profile.h"
 #include "components/autofill/core/browser/autofill_test_utils.h"
@@ -83,7 +84,8 @@ TEST_F(PaymentRequestContactInfoEditMediatorTest, TestFieldsWhenCreate) {
 
   ContactInfoEditMediator* mediator =
       [[ContactInfoEditMediator alloc] initWithPaymentRequest:payment_request()
-                                                      profile:nil];
+                                                      profile:nil
+                                              needsCompletion:NO];
   [mediator setConsumer:consumer];
 
   EXPECT_OCMOCK_VERIFY(consumer);
@@ -120,9 +122,10 @@ TEST_F(PaymentRequestContactInfoEditMediatorTest, TestFieldsWhenEdit) {
   [[consumer expect] setEditorFields:[OCMArg checkWithBlock:check_block]];
 
   autofill::AutofillProfile autofill_profile = autofill::test::GetFullProfile();
-  ContactInfoEditMediator* mediator = [[ContactInfoEditMediator alloc]
-      initWithPaymentRequest:payment_request()
-                     profile:&autofill_profile];
+  ContactInfoEditMediator* mediator =
+      [[ContactInfoEditMediator alloc] initWithPaymentRequest:payment_request()
+                                                      profile:&autofill_profile
+                                              needsCompletion:NO];
   [mediator setConsumer:consumer];
 
   EXPECT_OCMOCK_VERIFY(consumer);
@@ -154,7 +157,8 @@ TEST_F(PaymentRequestContactInfoEditMediatorTest, TestFieldsRequestNameOnly) {
 
   ContactInfoEditMediator* mediator =
       [[ContactInfoEditMediator alloc] initWithPaymentRequest:payment_request()
-                                                      profile:nil];
+                                                      profile:nil
+                                              needsCompletion:NO];
   [mediator setConsumer:consumer];
 
   EXPECT_OCMOCK_VERIFY(consumer);
@@ -191,8 +195,43 @@ TEST_F(PaymentRequestContactInfoEditMediatorTest, TestFieldsRequestPhoneEmail) {
 
   ContactInfoEditMediator* mediator =
       [[ContactInfoEditMediator alloc] initWithPaymentRequest:payment_request()
-                                                      profile:nil];
+                                                      profile:nil
+                                              needsCompletion:NO];
   [mediator setConsumer:consumer];
 
   EXPECT_OCMOCK_VERIFY(consumer);
+}
+
+// Tests that the editor's title is correct in various situations.
+TEST_F(PaymentRequestContactInfoEditMediatorTest, Title) {
+  // No profile, so the title should ask to add contact details.
+  ContactInfoEditMediator* mediator =
+      [[ContactInfoEditMediator alloc] initWithPaymentRequest:payment_request()
+                                                      profile:nil
+                                              needsCompletion:NO];
+  EXPECT_TRUE([[mediator title]
+      isEqualToString:l10n_util::GetNSString(
+                          IDS_PAYMENTS_ADD_CONTACT_DETAILS_LABEL)]);
+
+  // Has a profile, but doesn't need completion. Title should ask to edit.
+  autofill::AutofillProfile autofill_profile = autofill::test::GetFullProfile();
+  mediator =
+      [[ContactInfoEditMediator alloc] initWithPaymentRequest:payment_request()
+                                                      profile:&autofill_profile
+                                              needsCompletion:NO];
+  EXPECT_TRUE([[mediator title]
+      isEqualToString:l10n_util::GetNSString(
+                          IDS_PAYMENTS_EDIT_CONTACT_DETAILS_LABEL)]);
+
+  // Name missing, so title should ask to add a name.
+  autofill::test::SetProfileInfo(&autofill_profile, "", "", "",
+                                 "johndoe@example.com", "", "", "", "", "", "",
+                                 "", "16502111111");
+
+  mediator =
+      [[ContactInfoEditMediator alloc] initWithPaymentRequest:payment_request()
+                                                      profile:&autofill_profile
+                                              needsCompletion:YES];
+  EXPECT_TRUE([[mediator title]
+      isEqualToString:l10n_util::GetNSString(IDS_PAYMENTS_ADD_NAME)]);
 }
